# embl-bia-2026

./: .buildinfo  .gitignore  00_installation.html  01_our_first_juptyer_notebook.html  02_Dont_try_this_at_home.html  10_image_processing.html  11_cropping_images.html  12_multi_channel_image_data.html  14_inspecting_3d_images.html  20_filter_overview.html  21_understanding_filters_visually.html  22_background_removal.html  50_Thresholding.html  51_connected_component_labeling.html  52_voronoi_otsu_labeling.html  55_cellpose-sam.html  70_quantitative_measurements.html  72_timelapse_measurement_visualization.html  73_process_folders.html  80_bia-bob-demo.html  81_bia_bob-statistical_testing.html  82_generate_notebook.html  93_simulated_dataset.html  94_watershed_segmentation.html  95_histogram.html  blob_segmentation_and_area_analysis.html  genindex.html  imprint.html  intro.html  main.py  objects.inv  pyproject.toml  readme.md  search.html  searchindex.js
_sources/: 02_Dont_try_this_at_home.ipynb  12_multi_channel_image_data.ipynb  14_inspecting_3d_images.ipynb  20_filter_overview.ipynb  21_understanding_filters_visually.ipynb  22_background_removal.ipynb  50_Thresholding.ipynb  52_voronoi_otsu_labeling.ipynb  55_cellpose-sam.ipynb  70_quantitative_measurements.ipynb  73_process_folders.ipynb  80_bia-bob-demo.ipynb  95_histogram.ipynb  blob_segmentation_and_area_analysis.ipynb  intro.md
data/: cancer_cell_migration_source.html
docs/: 00_installation.md  01_our_first_juptyer_notebook.ipynb  10_image_processing.ipynb  11_cropping_images.ipynb  20_filter_overview.ipynb  (+10 more)
(+1 files in other folders)
